--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,6 +9,7 @@
 // 3. Global Utilities (to be implemented)
 // Global helper partials
 @use 'styles/card-helpers';
+@use 'styles/markdown';
 
 // 4. Resets & Normalization
 *,
