--- a/src/app/features/contact/contact.component.html
+++ b/src/app/features/contact/contact.component.html
@@ -1,19 +1,20 @@
-<div class="contact">
-  <div class="contact__container">
-    <header class="contact__header">
-      <h1 class="contact__title">Hire Me</h1>
-      <p class="contact__subtitle">Let's build something amazing together</p>
-    </header>
+<ng-container *transloco="let t">
+  <div class="contact">
+    <div class="contact__container">
+      <header class="contact__header">
+        <h1 class="contact__title">{{ t('contact.title') }}</h1>
+        <p class="contact__subtitle">{{ t('contact.subtitle') }}</p>
+      </header>
 
-    <div class="contact__content">
-      <div class="contact__placeholder">
-        <span class="contact__placeholder-icon">📧</span>
-        <h2 class="contact__placeholder-title">Coming Soon</h2>
-        <p class="contact__placeholder-text">
-          The contact form will allow potential clients to reach out with project inquiries and
-          collaboration opportunities.
-        </p>
+      <div class="contact__content">
+        <div class="contact__placeholder">
+          <span class="contact__placeholder-icon">📧</span>
+          <h2 class="contact__placeholder-title">{{ t('contact.comingSoon') }}</h2>
+          <p class="contact__placeholder-text">
+            {{ t('contact.description') }}
+          </p>
+        </div>
       </div>
     </div>
   </div>
-</div>
+</ng-container>
