--- a/src/app/shared/components/page-not-found/page-not-found.component.html
+++ b/src/app/shared/components/page-not-found/page-not-found.component.html
@@ -1,12 +1,18 @@
-<div class="page-not-found">
-  <div class="page-not-found__container">
-    <span class="page-not-found__code">404</span>
-    <h1 class="page-not-found__title">Page Not Found</h1>
-    <p class="page-not-found__message">
-      Sorry, the page you're looking for doesn't exist or has been moved.
-    </p>
-    <eb-button variant="primary" ariaLabel="Navigate to dashboard" routerLink="/">
-      Go to Dashboard
-    </eb-button>
+<ng-container *transloco="let t">
+  <div class="page-not-found">
+    <div class="page-not-found__container">
+      <span class="page-not-found__code">{{ t('pageNotFound.code') }}</span>
+      <h1 class="page-not-found__title">{{ t('pageNotFound.title') }}</h1>
+      <p class="page-not-found__message">
+        {{ t('pageNotFound.message') }}
+      </p>
+      <eb-button
+        variant="primary"
+        [ariaLabel]="t('pageNotFound.ariaLabels.goToDashboard')"
+        routerLink="/"
+      >
+        {{ t('pageNotFound.goToDashboard') }}
+      </eb-button>
+    </div>
   </div>
-</div>
+</ng-container>
