--- a/src/app/shared/components/skeleton/skeleton.component.scss
+++ b/src/app/shared/components/skeleton/skeleton.component.scss
@@ -124,9 +124,11 @@
   0% {
     opacity: 1;
   }
+
   50% {
     opacity: 0.4;
   }
+
   100% {
     opacity: 1;
   }
@@ -137,9 +139,11 @@
   0% {
     transform: translateX(-100%);
   }
+
   50% {
     transform: translateX(100%);
   }
+
   100% {
     transform: translateX(100%);
   }
@@ -171,7 +175,8 @@
 }
 
 [data-theme='lumen'] .skeleton,
-[data-theme='aurora'] .skeleton {
+[data-theme='aurora'] .skeleton,
+[data-theme='light-default'] .skeleton {
   background-color: rgba(0, 0, 0, 0.11);
 
   &--animation-wave {
